fix: overflow: visible

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -5999,3 +5999,7 @@ $item: 5;
 	}
 
 }
+
+.needsclick {
+	width: 100px !important;
+}
